Prevent word wrap in header bar

--- a/frontend/src/style/board.scss
+++ b/frontend/src/style/board.scss
@@ -63,6 +63,7 @@
         color: $black;
 
         span[contenteditable] {
+            white-space: nowrap;
             border: 2px solid transparent;
             padding: 0.3rem 0.6rem;
             &[contenteditable="false"]:hover,
