--- a/frontend/src/style/tool-layer.scss
+++ b/frontend/src/style/tool-layer.scss
@@ -66,9 +66,6 @@
                 padding: 0.5em 1em 0.2em;
                 flex-direction: row;
                 top: 4rem;
-                .touch & {
-                    top: 4em;
-                }
                 left: 50%;
                 transform: translateX(-50%);
             }
